--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
 			<li><a href="#about">Skills</a></li>
 			<li><a href="#research">Experience</a></li>
 			<li><a href="#findings">Portfolio</a></li>
+			<li><a href="#findings">Music</a></li>
+			<li><a href="#findings">Contact Me</a></li>
 
 </nav>
 
 <header>
-<img src="images/image1.jpg">
+<img src="images/image1.JPG">
 <h1>Hello, I'm Eric</h1>
 </header>
 
@@ -79,6 +81,37 @@
 <img src="images/example.jpg">
 
 <img src="images/example.jpg">
+
+</article>
+</div>
+
+<div class="music">
+<article>
+<h2>Music</h2>
+
+<img src="images/example.jpg">
+Song 1
+<audio controls="controls">
+  <source src="track.mp3" type="audio/mpeg" />
+</audio>
+
+<img src="images/example.jpg">
+Song 2
+<audio controls="controls">
+  <source src="track.mp3" type="audio/mpeg" />
+</audio>
+
+<img src="images/example.jpg">
+Song 3
+<audio controls="controls">
+  <source src="track.mp3" type="audio/mpeg" />
+</audio>
+
+<img src="images/example.jpg">
+Song 3
+<audio controls="controls">
+  <source src="track.mp3" type="audio/mpeg" />
+</audio>
 
 </article>
 </div>
