--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						</div>
 						<div class="infoplayer" id="infoplayer1">
 							<h3>Swag Boys</h3>
-							<p>swagboys is a song by swag boys that swaggy af</p>
+							<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
 							<audio controls="controls">
 								<source src="track.mp3" type="audio/mpeg" />
 							</audio>
@@ -112,7 +112,7 @@
 						</div>
 						<div class="infoplayer" id="infoplayer2">
 							<h3>Swag Boys</h3>
-							<p>swagboys is a song by swag boys that swaggy af</p>
+							<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
 							<audio controls="controls">
 								<source src="track.mp3" type="audio/mpeg" />
 							</audio>
@@ -127,7 +127,7 @@
 						</div>
 						<div class="infoplayer" id="infoplayer3">
 							<h3>Swag Boys</h3>
-							<p>swagboys is a song by swag boys that swaggy af</p>
+							<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
 							<audio controls="controls">
 								<source src="track.mp3" type="audio/mpeg" />
 							</audio>
