--- a/index_2.html
+++ b/index_2.html
@@ -8,7 +8,7 @@
 
 	
 	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style_2.css">
 
 </head>
 <body>
@@ -174,7 +174,7 @@
 
 	<script src="js/jquery-3.1.1.min.js"></script>
 
-	<script src="js/main.js"></script>
+	<script src="js/main_2.js"></script>
 
 
 
