--- a/index.html
+++ b/index.html
@@ -13,164 +13,323 @@
 </head>
 <body>
 	<div class="body">
-		<nav>
-
-			<li><a href="#aboutme" class="active">About Me</a></li>
-			<li><a href="#about">Skills</a></li>
-			<li><a href="#research">Experience</a></li>
-			<li><a href="#findings">Portfolio</a></li>
-			<li><a href="#findings">Music</a></li>
-			<li><a href="#findings">Contact Me</a></li>
-
-		</nav>
+		
 
 		<header>
-			<img src="images/image1.JPG">
-			<h1>Hello, I'm Eric</h1>
+			<img src="images/image1.JP">
+			<h1>Gawson Night</h1>
 		</header>
 
 		<div class="aboutme">
 			<article>
-				<h2>About Me</h2>
-				<p>swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag v v swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag v swag swag swag v </p>
+				<div class="aboutme-title section-title">
+					<h2>About Me</h2>
+					<!-- <input type="checkbox" id="unchecked" class="cbx hidden"/>
+					<label for="unchecked" class="lbl"></label> -->
+					<div class="switch">
+
+						<input type="checkbox" name="toggle">
+
+						<label for="toggle"><i></i></label>
+
+						<span></span>
+					</div>
+
+
+				</div>
+				<div class="all-aboutme section-content">
+					<p>swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag v v swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag v swag swag swag v </p>
+				</div>
 			</article>
 		</div>
 
 		<div class="skills">
 			<article>
-				<h2>Skills</h2>
-				<div class="skillswrapper">
-					<div>swag <img src="images/example.jpg"></div>
-					<div>swag <img src="images/example.jpg"></div>
-					<div>swag <img src="images/example.jpg"></div>
-					<div>swag <img src="images/example.jpg"></div>
-					<div>swag <img src="images/example.jpg"></div>
-					<div>swag <img src="images/example.jpg"></div>
-					<div>swag <img src="images/example.jpg"></div>
-					<div>swag <img src="images/example.jpg"></div>
-				</div>
-			</article>
-		</div>
+				<div class="skills-title section-title">
+					<h2>Skills</h2>
 
-		<div class="experience">
-			<article>
-				<h2>Experience</h2>
-				<li>swag</li>
-				<li>swag</li>
-				<li>swag</li>
-				<li>swag</li>
-				<li>swag</li>
-				<li>swag</li>
-				<li>swag</li>
-				<li>swag</li>
-			</article>
-		</div>
+					<div class="switch">
 
-		<div class="Portfolio">
-			<article>
-				<h2>Porfolio</h2>
+						<input type="checkbox" name="toggle">
 
-				<img src="images/example.jpg">
+						<label for="toggle"><i></i></label>
 
-				<img src="images/example.jpg">
-
-				<img src="images/example.jpg">
-
-				<img src="images/example.jpg">
-
-				<img src="images/example.jpg">
-
-				<img src="images/example.jpg">
-
-			</article>
-		</div>
-
-		<div class="music">
-			<article>
-				<h2>Music</h2>
-
-				<div class="music-wrapper">
-					<div class="song" id="song1">
-						<div class="songinfo" id="songinfo1">
-							<img src="images/example.jpg" id="songimage1">
-							<button>View</button>
-						</div>
-						<div class="infoplayer" id="infoplayer1">
-							<h3>Swag Boys</h3>
-							<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
-							<audio controls="controls">
-								<source src="track.mp3" type="audio/mpeg" />
-							</audio>
-							<button id="return1">return</button>
+						<span></span>
+					</div></div>
+					<div class="all-skills section-content">
+						<div class="skillswrapper">
+							<div>swag <img src="images/example.jpg"></div>
+							<div>swag <img src="images/example.jpg"></div>
+							<div>swag <img src="images/example.jpg"></div>
+							<div>swag <img src="images/example.jpg"></div>
+							<div>swag <img src="images/example.jpg"></div>
+							<div>swag <img src="images/example.jpg"></div>
+							<div>swag <img src="images/example.jpg"></div>
+							<div>swag <img src="images/example.jpg"></div>
 						</div>
 					</div>
-
-					<div class="song" id="song2">
-						<div class="songinfo" id="songinfo2">
-							<img src="images/example.jpg" id="songimage2">
-							<button>View</button>
-						</div>
-						<div class="infoplayer" id="infoplayer2">
-							<h3>Swag Boys</h3>
-							<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
-							<audio controls="controls">
-								<source src="track.mp3" type="audio/mpeg" />
-							</audio>
-							<button id="return2">return</button>
-						</div>
-					</div>
-
-					<div class="song" id="song3">
-						<div class="songinfo" id="songinfo3">
-							<img src="images/example.jpg" id="songimage3">
-							<button>View</button>
-						</div>
-						<div class="infoplayer" id="infoplayer3">
-							<h3>Swag Boys</h3>
-							<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
-							<audio controls="controls">
-								<source src="track.mp3" type="audio/mpeg" />
-							</audio>
-							<button id="return3">return</button>
-						</div>
-					</div>
-				</div>
-
-
-
-
-			</article>
-		</div>
-
-		<form>
-			<div class="contact-info">
-				<h2>Let's Collaborate</h2>
-
-				<label for="fullName" >Full Name</label>
-				<input type="text" name="fullName" id="fullName" placeholder="Enter your Name">
-
-				<label for="emailAddress">Email</label>
-				<input type="email" name="emailAddress" id="emailAddress" placeholder="Enter your email">
-
-				<label for="phoneNumber">Phone Number</label>
-				<input type="text" name="phoneNumber" id="phoneNumber" placeholder="Enter your phone number">
-
-				<label for="what-is-your">Description</label>
-				<textarea name="what-is-your" id="what-is-your" placeholder="Describe your project"></textarea>
+				</article>
 			</div>
 
-			<hr>
+			<div class="experience">
+
+				<article>
+					<div class="experience-title section-title">
+						<h2>Experience</h2>
+						<div class="switch">
+
+							<input type="checkbox" name="toggle">
+
+							<label for="toggle"><i></i></label>
+
+							<span></span>
+						</div>
+					</div>
+					<div class="all-experience section-content">	
+						<li>swag</li>
+						<li>swag</li>
+						<li>swag</li>
+						<li>swag</li>
+						<li>swag</li>
+						<li>swag</li>
+						<li>swag</li>
+						<li>swag</li>
+					</div>
+				</article>
+			</div>
+
+			<div class="Portfolio">
+				<article>
+					<div class="portfolio-title section-title">
+						<h2>Porfolio</h2>
+						<div class="switch">
+
+							<input type="checkbox" name="toggle">
+
+							<label for="toggle"><i></i></label>
+
+							<span></span>
+						</div></div>
+					
+					<div class="all-portfolio section-content">
+						<img src="images/example.jpg">
+
+						<img src="images/example.jpg">
+
+						<img src="images/example.jpg">
+
+						<img src="images/example.jpg">
+
+						<img src="images/example.jpg">
+
+						<img src="images/example.jpg">
+					</div>
+
+				</article>
+			</div>
+
+			<div class="music">
+				<article>
+					<div class="music-title section-title">
+						<h2>Music</h2>
+
+						<div class="switch">
+
+							<input type="checkbox" name="toggle">
+
+							<label for="toggle"><i></i></label>
+
+							<span></span>
+						</div>
+
+					</div>
+					<div class="all-music section-content">
+						<div class="music-wrapper">
+							<div class="song" id="song1">
+								<div class="songinfo" id="songinfo1">
+									<img src="images/example.jpg" id="songimage1">
+									<button>View</button>
+								</div>
+								<div class="infoplayer" id="infoplayer1">
+									<h3>Swag Boys</h3>
+									<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
+									<audio controls="controls">
+										<source src="track.mp3" type="audio/mpeg" />
+									</audio>
+									<button id="return1">return</button>
+								</div>
+							</div>
+
+							<div class="song" id="song2">
+								<div class="songinfo" id="songinfo2">
+									<img src="images/example.jpg" id="songimage2">
+									<button>View</button>
+								</div>
+								<div class="infoplayer" id="infoplayer2">
+									<h3>Swag Boys</h3>
+									<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
+									<audio controls="controls">
+										<source src="track.mp3" type="audio/mpeg" />
+									</audio>
+									<button id="return2">return</button>
+								</div>
+							</div>
+
+							<div class="song" id="song3">
+								<div class="songinfo" id="songinfo3">
+									<img src="images/example.jpg" id="songimage3">
+									<button>View</button>
+								</div>
+								<div class="infoplayer" id="infoplayer3">
+									<h3>Swag Boys</h3>
+									<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
+									<audio controls="controls">
+										<source src="track.mp3" type="audio/mpeg" />
+									</audio>
+									<button id="return3">return</button>
+								</div>
+							</div>
+						</div>
+
+						<div class="music-wrapper">
+							<div class="song" id="song4">
+								<div class="songinfo" id="songinfo4">
+									<img src="images/example.jpg" id="songimage4">
+									<button>View</button>
+								</div>
+								<div class="infoplayer" id="infoplayer4">
+									<h3>Swag Boys</h3>
+									<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
+									<audio controls="controls">
+										<source src="track.mp3" type="audio/mpeg" />
+									</audio>
+									<button id="return4">return</button>
+								</div>
+							</div>
+
+							<div class="song" id="song5">
+								<div class="songinfo" id="songinfo5">
+									<img src="images/example.jpg" id="songimage5">
+									<button>View</button>
+								</div>
+								<div class="infoplayer" id="infoplayer5">
+									<h3>Swag Boys</h3>
+									<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
+									<audio controls="controls">
+										<source src="track.mp3" type="audio/mpeg" />
+									</audio>
+									<button id="return5">return</button>
+								</div>
+							</div>
+
+							<div class="song" id="song6">
+								<div class="songinfo" id="songinfo6">
+									<img src="images/example.jpg" id="songimage6">
+									<button>View</button>
+								</div>
+								<div class="infoplayer" id="infoplayer6">
+									<h3>Swag Boys</h3>
+									<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
+									<audio controls="controls">
+										<source src="track.mp3" type="audio/mpeg" />
+									</audio>
+									<button id="return6">return</button>
+								</div>
+							</div>
+						</div>
+
+						<div class="music-wrapper">
+							<div class="song" id="song7">
+								<div class="songinfo" id="songinfo7">
+									<img src="images/example.jpg" id="songimage7">
+									<button>View</button>
+								</div>
+								<div class="infoplayer" id="infoplayer7">
+									<h3>Swag Boys</h3>
+									<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
+									<audio controls="controls">
+										<source src="track.mp3" type="audio/mpeg" />
+									</audio>
+									<button id="return7">return</button>
+								</div>
+							</div>
+
+							<div class="song" id="song8">
+								<div class="songinfo" id="songinfo8">
+									<img src="images/example.jpg" id="songimage8">
+									<button>View</button>
+								</div>
+								<div class="infoplayer" id="infoplayer8">
+									<h3>Swag Boys</h3>
+									<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
+									<audio controls="controls">
+										<source src="track.mp3" type="audio/mpeg" />
+									</audio>
+									<button id="return8">return</button>
+								</div>
+							</div>
+
+							<div class="song" id="song9">
+								<div class="songinfo" id="songinfo9">
+									<img src="images/example.jpg" id="songimage9">
+									<button>View</button>
+								</div>
+								<div class="infoplayer" id="infoplayer9">
+									<h3>Swag Boys</h3>
+									<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
+									<audio controls="controls">
+										<source src="track.mp3" type="audio/mpeg" />
+									</audio>
+									<button id="return9">return</button>
+								</div>
+							</div>
+						</div>
+
+					</div>
+
+
+				</article>
+			</div>
+
+			<form><article>
+				<div class="contact-info">
+					<div class="contact-title section-title">
+						<h2>Let's Collaborate</h2>
+
+						<div class="switch">
+
+							<input type="checkbox" name="toggle">
+
+							<label for="toggle"><i></i></label>
+
+							<span></span>
+						</div>
+					</div>
+					<div class="all-contact section-content">
+
+						<label for="fullName" >Full Name</label>
+						<input type="text" name="fullName" id="fullName" placeholder="Enter your Name">
+
+						<label for="emailAddress">Email</label>
+						<input type="email" name="emailAddress" id="emailAddress" placeholder="Enter your email">
+
+						<label for="phoneNumber">Phone Number</label>
+						<input type="text" name="phoneNumber" id="phoneNumber" placeholder="Enter your phone number">
+
+						<label for="what-is-your">Description</label>
+						<textarea name="what-is-your" id="what-is-your" placeholder="Describe your project"></textarea>
 
 
 
-			<button type="submit">Submit</button>
+						<button type="submit">Submit</button>
+					</div>
+				</div>
+</article>
+			</form>
 
-		</form>
+		</div>
 
 
-
-
-	</div>
 
 	<script src="js/jquery-3.1.1.min.js"></script>
 
