--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
 				</div>
 				<div class="all-aboutme section-content">
-					<p>swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag v v swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag v swag swag swag v </p>
+				<div class="inner-content"
+					<p>swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag v v swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag v swag swag swag v </p></div>
 				</div>
 			</article>
 		</div>
