--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<h1>Gawson Night</h1>
 		</header>
 
-		<div class="aboutme">
+		<div class="aboutme section">
 			<article>
 				<div class="aboutme-title section-title">
 					<h2>About Me</h2>
@@ -44,7 +44,7 @@
 			</article>
 		</div>
 
-		<div class="skills">
+		<div class="skills section">
 			<article>
 				<div class="skills-title section-title">
 					<h2>Skills</h2>
@@ -72,7 +72,7 @@
 				</article>
 			</div>
 
-			<div class="experience">
+			<div class="experience section">
 
 				<article>
 					<div class="experience-title section-title">
@@ -99,7 +99,7 @@
 				</article>
 			</div>
 
-			<div class="Portfolio">
+			<div class="Portfolio section ">
 				<article>
 					<div class="portfolio-title section-title">
 						<h2>Porfolio</h2>
@@ -129,7 +129,7 @@
 				</article>
 			</div>
 
-			<div class="music">
+			<div class="music section ">
 				<article>
 					<div class="music-title section-title">
 						<h2>Music</h2>
@@ -293,7 +293,7 @@
 			</div>
 
 			<form><article>
-				<div class="contact-info">
+				<div class="contact-info section ">
 					<div class="contact-title section-title">
 						<h2>Let's Collaborate</h2>
 
