--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		
 
 		<header>
-		<img src="images/gawson.gif">
+		<img src="images/gawson_animated.gif">
 			<h1>Gawson Night</h1>
 		</header>
 
