--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans:300,400,600,700" rel="stylesheet">
 
-	
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/style.css">
 
@@ -18,14 +18,17 @@
 		
 
 		<header>
-		<img src="images/gawson_animated.gif">
+		<img src="images/gawsonnight_header_2.png">
+		<video playsinline autoplay muted loop  id="bgvid">
+    <source src="images/Gawson.mp4" type="video/mp4">
+</video>
 			<h1>Gawson Night</h1>
 		</header>
 
 		<div class="aboutme section">
 			<article>
 				<div class="aboutme-title section-title">
-					<h2>About Me</h2>
+					<h2>About</h2>
 					<!-- <input type="checkbox" id="unchecked" class="cbx hidden"/>
 					<label for="unchecked" class="lbl"></label> -->
 					<div class="switch">
@@ -60,7 +63,9 @@
 						<span></span>
 					</div></div>
 					<div class="all-skills section-content">
+					<div class="inner-content">
 						<div class="skillswrapper">
+
 							<div>swag <img src="images/example.jpg"></div>
 							<div>swag <img src="images/example.jpg"></div>
 							<div>swag <img src="images/example.jpg"></div>
@@ -69,6 +74,7 @@
 							<div>swag <img src="images/example.jpg"></div>
 							<div>swag <img src="images/example.jpg"></div>
 							<div>swag <img src="images/example.jpg"></div>
+						</div>
 						</div>
 					</div>
 				</article>
@@ -88,7 +94,8 @@
 							<span></span>
 						</div>
 					</div>
-					<div class="all-experience section-content">	
+					<div class="all-experience section-content">
+					<div class="inner-content">	
 						<li>swag</li>
 						<li>swag</li>
 						<li>swag</li>
@@ -97,6 +104,7 @@
 						<li>swag</li>
 						<li>swag</li>
 						<li>swag</li>
+						</div>
 					</div>
 				</article>
 			</div>
@@ -115,6 +123,7 @@
 						</div></div>
 					
 					<div class="all-portfolio section-content">
+					<div class="inner-content">
 						<img src="images/example.jpg">
 
 						<img src="images/example.jpg">
@@ -126,6 +135,7 @@
 						<img src="images/example.jpg">
 
 						<img src="images/example.jpg">
+						</div>
 					</div>
 
 				</article>
@@ -147,7 +157,7 @@
 
 					</div>
 					<div class="all-music section-content">
-						<div class="music-wrapper">
+						<div class="music-wrapper row-1">
 							<div class="song" id="song1">
 								<div class="songinfo" id="songinfo1">
 									<img src="images/example.jpg" id="songimage1">
@@ -194,7 +204,7 @@
 							</div>
 						</div>
 
-						<div class="music-wrapper">
+						<div class="music-wrapper row-2">
 							<div class="song" id="song4">
 								<div class="songinfo" id="songinfo4">
 									<img src="images/example.jpg" id="songimage4">
@@ -241,7 +251,7 @@
 							</div>
 						</div>
 
-						<div class="music-wrapper">
+						<div class="music-wrapper row-3">
 							<div class="song" id="song7">
 								<div class="songinfo" id="songinfo7">
 									<img src="images/example.jpg" id="songimage7">
@@ -297,7 +307,7 @@
 			<form><article>
 				<div class="contact-info section">
 					<div class="contact-title section-title">
-						<h2>Let's Collaborate</h2>
+						<h2>Connect</h2>
 
 						<div class="switch">
 
