--- a/index.html
+++ b/index.html
@@ -66,14 +66,12 @@
 					<div class="inner-content">
 						<div class="skillswrapper">
 
-							<div>swag <img src="images/example.jpg"></div>
-							<div>swag <img src="images/example.jpg"></div>
-							<div>swag <img src="images/example.jpg"></div>
-							<div>swag <img src="images/example.jpg"></div>
-							<div>swag <img src="images/example.jpg"></div>
-							<div>swag <img src="images/example.jpg"></div>
-							<div>swag <img src="images/example.jpg"></div>
-							<div>swag <img src="images/example.jpg"></div>
+							<div class="skill"><h5>swag</h5> <img src="images/example.jpg"></div>
+							<div class="skill"><h5>swag</h5> <img src="images/example.jpg"></div>
+							<div class="skill"><h5>swag</h5> <img src="images/example.jpg"></div>
+							<div class="skill"><h5>swag</h5> <img src="images/example.jpg"></div>
+							<div class="skill"><h5>swag</h5> <img src="images/example.jpg"></div>
+							<div class="skill"><h5>swag</h5> <img src="images/example.jpg"></div>
 						</div>
 						</div>
 					</div>
@@ -96,8 +94,6 @@
 					</div>
 					<div class="all-experience section-content">
 					<div class="inner-content">	
-						<li>swag</li>
-						<li>swag</li>
 						<li>swag</li>
 						<li>swag</li>
 						<li>swag</li>
@@ -157,6 +153,7 @@
 
 					</div>
 					<div class="all-music section-content">
+					<div class="inner-content">
 						<div class="music-wrapper row-1">
 							<div class="song" id="song1">
 								<div class="songinfo" id="songinfo1">
@@ -202,6 +199,7 @@
 									<button id="return3">return</button>
 								</div>
 							</div>
+						</div>
 						</div>
 
 						<div class="music-wrapper row-2">
