--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 		
 
 		<header>
-		<img src="images/gawsonnight_header_2.png">
+		<img class="header-img" src="images/gawsonnight_header_2.png">
 		<video playsinline autoplay muted loop  id="bgvid">
     <source src="images/Gawson.mp4" type="video/mp4">
 </video>
-			<h1>Gawson Night</h1>
+			<br><img class="logo" src="images/gawsonnight_logo.png">
 		</header>
 
 		<div class="aboutme section">
@@ -317,6 +317,7 @@
 						</div>
 					</div>
 					<div class="all-contact section-content">
+					<div class="inner-content">
 
 						<label for="fullName" >Full Name</label>
 						<input type="text" name="fullName" id="fullName" placeholder="Enter your Name">
@@ -332,9 +333,12 @@
 
 
 
+
 						<button type="submit">Submit</button>
 					</div>
+					</div>
 				</div>
+
 </article>
 			</form>
 
