--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
 				</div>
 				<div class="all-aboutme section-content">
-				<div class="inner-content"
-					<p>swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag v v swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag swag v swag swag swag v </p></div>
+				<div class="inner-content">
+					<p>codd name gawson night is  </p></div>
 				</div>
 			</article>
 		</div>
@@ -66,19 +66,19 @@
 					<div class="inner-content">
 						<div class="skillswrapper">
 
-							<div class="skill"><h5>swag</h5> <img src="images/example.jpg"></div>
-							<div class="skill"><h5>swag</h5> <img src="images/example.jpg"></div>
-							<div class="skill"><h5>swag</h5> <img src="images/example.jpg"></div>
-							<div class="skill"><h5>swag</h5> <img src="images/example.jpg"></div>
-							<div class="skill"><h5>swag</h5> <img src="images/example.jpg"></div>
-							<div class="skill"><h5>swag</h5> <img src="images/example.jpg"></div>
+							<div class="skill"><h5>Logic 9 / X</h5> <img src="images/logic.png"></div>
+							<div class="skill"><h5>Ableton 9</h5> <img src="images/ableton.png"></div>
+							<div class="skill"><h5>UAD Platform</h5> <img src="images/uad.png"></div>
+							<div class="skill"><h5>Recording</h5> <img src="images/recording.png"></div>
+							<div class="skill"><h5>Song Writing</h5> <img src="images/songwriting.png"></div>
+							<div class="skill"><h5>Sound Design</h5> <img src="images/sounddesign.png"></div>
 						</div>
 						</div>
 					</div>
 				</article>
 			</div>
 
-			<div class="experience section">
+			<!-- <div class="experience section">
 
 				<article>
 					<div class="experience-title section-title">
@@ -103,7 +103,7 @@
 						</div>
 					</div>
 				</article>
-			</div>
+			</div> -->
 
 			<div class="Portfolio section ">
 				<article>
@@ -120,17 +120,7 @@
 					
 					<div class="all-portfolio section-content">
 					<div class="inner-content">
-						<img src="images/example.jpg">
-
-						<img src="images/example.jpg">
-
-						<img src="images/example.jpg">
-
-						<img src="images/example.jpg">
-
-						<img src="images/example.jpg">
-
-						<img src="images/example.jpg">
+						<p>coming soon... </p>
 						</div>
 					</div>
 
@@ -334,7 +324,7 @@
 
 
 
-						<button type="submit">Submit</button>
+						<button class="submit" type="submit">Submit</button>
 					</div>
 					</div>
 				</div>
