--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@
 						<div class="music-wrapper row-1">
 							<div class="song" id="song1">
 								<div class="songinfo" id="songinfo1">
-									<img src="images/example.jpg" id="songimage1">
+									<img src="images/panda.png" id="songimage1">
 									<button>View</button>
 								</div>
 								<div class="infoplayer" id="infoplayer1">
-									<h3>Swag Boys</h3>
-									<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
+									<h3>Panda (remix)</h3>
+									<p>A snippet of gawson night's remix of desiigner's number 1 record "panda" off of night's upcoming remix ep entitled "kill or be killed</p>
 									<audio controls="controls">
-										<source src="track.mp3" type="audio/mpeg" />
+										<source src="audio/panda.mp3" type="audio/mpeg" />
 									</audio>
 									<button id="return1">return</button>
 								</div>
@@ -162,14 +162,14 @@
 
 							<div class="song" id="song2">
 								<div class="songinfo" id="songinfo2">
-									<img src="images/example.jpg" id="songimage2">
+									<img src="images/morning.png" id="songimage2">
 									<button>View</button>
 								</div>
 								<div class="infoplayer" id="infoplayer2">
-									<h3>Swag Boys</h3>
-									<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
+									<h3>Before the Morning</h3>
+									<p>"Before the morning" is the instrumental electronic-hop interlude on his upcoming self entitled album.</p>
 									<audio controls="controls">
-										<source src="track.mp3" type="audio/mpeg" />
+										<source src="audio/before.mp3" type="audio/mpeg" />
 									</audio>
 									<button id="return2">return</button>
 								</div>
@@ -177,14 +177,14 @@
 
 							<div class="song" id="song3">
 								<div class="songinfo" id="songinfo3">
-									<img src="images/example.jpg" id="songimage3">
+									<img src="images/psychos.png" id="songimage3">
 									<button>View</button>
 								</div>
 								<div class="infoplayer" id="infoplayer3">
-									<h3>Swag Boys</h3>
-									<p>swagboys is a song by swag boys that swaggy af swagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy afswagboys is a song by swag boys that swaggy af</p>
+									<h3>Psychos Together</h3>
+									<p>Psychos is night's avante garde cinematic structural fuck you. From his upcoming self entitled album, "Psychos" is the sonic embodiment of disfunctionally passionate love.</p>
 									<audio controls="controls">
-										<source src="track.mp3" type="audio/mpeg" />
+										<source src="audio/psychos.mp3" type="audio/mpeg" />
 									</audio>
 									<button id="return3">return</button>
 								</div>
