--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
 		<div class="aboutme section">
 			<article>
 				<div class="aboutme-title section-title">
-					<h2>About</h2>
+					<h2>About</h2><div class="loading-dots">
+		  <div class="dot"></div>
+		  <div class="dot"></div>
+		  <div class="dot"></div>
+		    <div class="dot"></div>
+		      <div class="dot"></div>
+		</div>
 					<!-- <input type="checkbox" id="unchecked" class="cbx hidden"/>
 					<label for="unchecked" class="lbl"></label> -->
 					<div class="switch">
@@ -52,7 +58,13 @@
 		<div class="skills section">
 			<article>
 				<div class="skills-title section-title">
-					<h2>Skills</h2>
+					<h2>Skills</h2><div class="loading-dots">
+		  <div class="dot"></div>
+		  <div class="dot"></div>
+		  <div class="dot"></div>
+		    <div class="dot"></div>
+		      <div class="dot"></div>
+		</div>
 
 					<div class="switch">
 
@@ -108,7 +120,13 @@
 			<div class="Portfolio section ">
 				<article>
 					<div class="portfolio-title section-title">
-						<h2>Porfolio</h2>
+						<h2>Porfolio</h2><div class="loading-dots">
+		  <div class="dot"></div>
+		  <div class="dot"></div>
+		  <div class="dot"></div>
+		    <div class="dot"></div>
+		      <div class="dot"></div>
+		</div>
 						<div class="switch">
 
 							<input type="checkbox" name="toggle">
@@ -130,7 +148,13 @@
 			<div class="music section ">
 				<article>
 					<div class="music-title section-title">
-						<h2>Music</h2>
+						<h2>Music</h2><div class="loading-dots">
+		  <div class="dot"></div>
+		  <div class="dot"></div>
+		  <div class="dot"></div>
+		    <div class="dot"></div>
+		      <div class="dot"></div>
+		</div>
 
 						<div class="switch">
 
@@ -295,7 +319,13 @@
 			<form><article>
 				<div class="contact-info section">
 					<div class="contact-title section-title">
-						<h2>Connect</h2>
+						<h2>Connect</h2><div class="loading-dots">
+		  <div class="dot"></div>
+		  <div class="dot"></div>
+		  <div class="dot"></div>
+		    <div class="dot"></div>
+		      <div class="dot"></div>
+		</div>
 
 						<div class="switch">
 
