--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				</div>
 				<div class="all-aboutme section-content">
 				<div class="inner-content">
-					<p>codd name gawson night is  </p></div>
+					<p>codd name gawson night is a project hdhahdah  </p></div>
 				</div>
 			</article>
 		</div>
@@ -338,7 +338,8 @@
 					</div>
 					<div class="all-contact section-content">
 					<div class="inner-content">
-
+					<div class="contact-section">
+						<div class="contact-form">
 						<label for="fullName" >Full Name</label>
 						<input type="text" name="fullName" id="fullName" placeholder="Enter your Name">
 
@@ -355,6 +356,10 @@
 
 
 						<button class="submit" type="submit">Submit</button>
+						</div>
+						<div class="contact-image">
+						<img src="images/studio.png"></div>
+						</div>
 					</div>
 					</div>
 				</div>
