--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				</div>
 				<div class="all-aboutme section-content">
 				<div class="inner-content">
-					<p>codd name gawson night is a project hdhahdah  </p></div>
+					<p>Gawson night is a music producer from VERSAMARSVII.  </p></div>
 				</div>
 			</article>
 		</div>
